<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">全城维修</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_toggle">Switch</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="menu_map_demo">Map Demo</string>
    <string name="menu_user_signup">Sign</string>
    <string name="menu_sliding_demo">Sliding Demo</string>
    <string name="menu_user_logout">Logout</string>
    <string name="feedback">意见反馈</string>

    <string name="popup_text_my_location">"我的位置"</string>
    <string name="title_main_mapview">查看地图</string>
    <string name="search_hint">Search Listings</string>


    <!-- signup/login ui -->
    <string name="signup_hint_login_name">用户名或者手机号码</string>
    <string name="signup_hint_password">登录密码</string>
    <string name="signup_hint_verifycode">验证码</string>
    <string name="signup_hint_email">电子邮箱地址</string>
    <string name="signup_hint_new_user">创建我的帐号</string>
    <string name="signup_hint_by_verify_code">手机/验证码录</string>
    <string name="signup_hint_by_password">用户名/密码登录</string>
    <string name="loginview_log_out_button">登出</string>
    <string name="loginview_log_in_button">登录</string>
    <string name="loginview_get_code_button">获取验证码</string>
    <string name="loginview_pass_verified">"验证完成! GO >>>"</string>
    <string name="loginview_error_verified">"验证码不匹配! ..."</string>

    <string name="succeed_message_send_verify_code">"验证码已经发送到手机号码%1$s，请查收。"</string>
    <string name="error_message_send_verify_code">"发送验证码短信到手机%1$s时, 遇到异常%2$s"</string>
    <string name="succeed_message_mobile_verified">"手机号码%1$s通过验证【%2$s】"</string>
    <string name="error_message_mobile_verified">"验证失败，手机号 %1$s, 验证码【%2$s】"</string>

    <string name="error_message_exception">异常: %1$s</string>
    <string name="qp_login_get_verify_code">获取验证码</string>
    <string name="qp_login_get_verify_code_again">重新获取</string>
    <string name="signup_button_get_start">开始</string>
    <string name="signup_hint_code">请输入验证码</string>
    <string name="signup_hint_mobile">请输入手机号码，用于接收验证码短信。</string>
    <string name="preferences_debug_option">调试选项</string>
    <string name="preferences_local_mms_code">从客户端发送验证码</string>
    <string name="preferences_local_mms_code_summary">从客户端生成，发送验证码，并发送短信到给定手机号。</string>
    <string name="app_title_profile">个人信息</string>

    <string name="profile_user_name">"名字"</string>
    <string name="profile_user_gender">"性别"</string>
    <string name="profile_user_address">"常住地址"</string>
    <string name="profile_user_mobile">"手机号码"</string>
    <string name="profile_user_rank">"用户好评"</string>
    <string name="publish">发布</string>
    <string name="post_address">地址</string>
    <string name="post_description">描述</string>
    <string name="post_hint_description">请简单描述您遇到的问题，至少8个字。</string>
    <string name="post_date">出厂日期</string>
    <string name="post_hint_date">如，2013</string>
    <string name="post_model">型号</string>
    <string name="post_hint_limit_two_char">至少2个字</string>
    <string name="post_brand">品牌</string>
    <string name="post_contact">联系人</string>
    <string name="post_location">具体位置</string>
    <string name="post_hint_location">小区门牌号</string>
    <string name="error_post_empty_field">请填写完整的报修单后再提交。</string>
    <string name="error_message_limit_two_char">输入的字数太少，请检查，补充。</string>
    <string name="post_result_succeed">报修完成</string>
    <string name="post_result_fail">报修失败</string>
    <string name="edit_profile_img_camera">使用相机拍照</string>
    <string name="edit_profile_img_location">从图库选择照片</string>

    <string name="preferences_notifications">通知消息设置</string>
    <string name="preferences_notifications_enable">接收云推送消息</string>
    <string name="preferences_notifications_summary">接收云推送通知，消息，及时同步信息状态。</string>
    <string name="preferences_ringtone">选择通知铃声</string>
    <string name="preferences_vibrate_enable">震动</string>
    <string name="preferences_vibrate_summary">新通知，信息响铃同时震动提醒</string>
    <string name="list_posts_succeed">读取工单列表完成</string>
    <string name="list_posts_fail">读取工单列表遇到错误</string>
    <string name="post_item_price">花费:%1$s</string>
    <string name="post_item_description">详细描述</string>
    <string name="post_item_title">标题</string>
    <string name="post_item_time">发布时间 %1$s</string>
    <string name="post_item_status">订单状态:%1$s</string>
    <string name="post_create_time">发布时间:</string>
    <string name="qp_post_order">抢单</string>
    <string name="qp_post_write_comment">写评论</string>
    <string name="post_comment">评论</string>
    <string name="post_description_demo">我家的空调排气扇灰尘太大，需要清理。</string>
    <string name="post_comment_hint">(有疑问可以直接写评论)</string>
    <string name="take_post_succeed">抢单成功</string>
    <string name="take_post_fail">抢单失败</string>
    <string name="get_post_succeed">成功获取工单详情</string>
    <string name="get_post_fail">获取工单详情失败</string>
    <string name="add_comment_succeed">添加评论成功</string>
    <string name="add_comment_fail">添加评论遇到错误</string>
    <string name="avatar_result_succeed">上传头像成功</string>
    <string name="avatar_result_fail">上传头像失败</string>
    <string name="map">地图</string>
    <string name="provider_list">周边的人</string>
</resources>
