<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="20dip"
              android:layout_gravity="center"
              android:orientation="vertical" >

    <com.funyoung.view.ScaleImageView
            android:id="@+id/img_info"
            android:layout_width="wrap_content"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:padding="10dip"
            android:src="@drawable/ic_classify_airconditioning" />

    <LinearLayout
            android:id="@+id/info_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <LinearLayout
                android:id="@+id/info_leftl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/label_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:text="@string/post_create_time" />

            <TextView
                    android:id="@+id/label_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/post_brand" />
            <TextView
                    android:id="@+id/label_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/post_model" />

            <TextView
                    android:id="@+id/label_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/post_date" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/info_rightl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/tv_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="2013-08-15" />

            <TextView
                    android:id="@+id/tv_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:text="格力"
                    android:singleLine="true" />
            <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="未填写" />

            <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="5dip"
                    android:ellipsize="end"
                    android:text="2011"
                    android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/label_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="@string/post_description"
            android:singleLine="true" />

    <TextView
            android:id="@+id/tv_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="5dip"
            android:text="@string/post_description_demo"
            android:maxLines="15" />


    <TextView android:id="@+id/tv_order"
              android:background="@drawable/button_style"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:minHeight="@dimen/item_block_min_size"
              android:minWidth="72dp"
              android:textColor="@android:color/white"
              android:layout_gravity="center"
              android:gravity="center"
              android:text="@string/qp_post_order"
            />

    <LinearLayout
            android:id="@+id/comment_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dip"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/label_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:text="@string/post_comment"
                android:singleLine="true" />

        <TextView
                android:id="@+id/hint_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="5dip"
                android:textColor="@android:color/darker_gray"
                android:text="@string/post_comment_hint"
                android:singleLine="true" />


        <TextView android:id="@+id/tv_order"
                  android:background="@drawable/button_style"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dip"
                  android:minHeight="@dimen/item_block_min_size"
                  android:minWidth="50dp"
                  android:textColor="@android:color/white"
                  android:layout_gravity="right"
                  android:gravity="center"
                  android:text="@string/qp_post_write_comment"
                />
    </LinearLayout>
</LinearLayout>